# TrustTunnelFlutterClient

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build-windows-x64.yml  build-windows.yml
installer/: trusttunnel.iss
ios/Runner.xcodeproj/: project.pbxproj
ios/TrustTunnel.icon/: icon.json
lib/: main.dart
lib/common/error/: error_utils.dart
lib/common/error/model/enum/: presentation_field_name.dart
lib/common/localization/arb/: intl_en.arb
lib/common/utils/: certificate_encoders.dart
lib/data/database/: app_database.dart
lib/data/database/tables/: certificate_table.drift  servers_table.drift
lib/data/datasources/: vpn_datasource.dart
lib/data/datasources/local_sources/: certificate_datasource_impl.dart  server_datasource_impl.dart
lib/data/datasources/native_sources/: vpn_datasource.dart
lib/data/model/: server.dart
lib/data/model/raw/: add_server_request.dart  raw_server.dart
lib/data/repository/: server_repository.dart  vpn_repository.dart
lib/di/model/: dependency_factory.dart
lib/feature/app/: app.dart  deep_link_service.dart  tray_service.dart
lib/feature/navigation/: navigation_screen.dart
lib/feature/routing/routing/widgets/: routing_edit_name_dialog.dart
lib/feature/server/server_details/controller/: servers_details_controller.dart
lib/feature/server/server_details/domain/service/: server_details_service.dart
lib/feature/server/server_details/model/: server_details_data.dart
lib/feature/server/server_details/widgets/: server_details_form.dart  server_details_full_screen_view.dart  server_details_popup.dart
lib/feature/server/server_details/widgets/scope/: server_details_scope.dart
lib/feature/server/servers/widget/: servers_screen_view.dart
lib/feature/settings/settings/: settings_screen.dart
lib/feature/vpn/widgets/: vpn_scope.dart
lib/widgets/inputs/: custom_text_field.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
plugins/vpn_plugin/lib/: vpn_plugin.dart
plugins/vpn_plugin/lib/domain/: configuration_encoder.dart
plugins/vpn_plugin/lib/models/: endpoint.dart
plugins/vpn_plugin/pigeons/: platform_api.dart
plugins/vpn_plugin/windows/: CMakeLists.txt  vpn_plugin.cpp  vpn_plugin.h  vpn_plugin_c_api.cpp
plugins/vpn_plugin/windows/include/vpn_plugin/: vpn_plugin.h
plugins/vpn_plugin/windows/vpn_easy/: README.md
plugins/vpn_plugin/windows/vpn_easy/include/: vpn_easy.h
plugins/vpn_plugin/windows/vpn_easy/include/vpn/: platform.h
specs/: TrustTunnelClient.podspec
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: main.cpp  runner.exe.manifest
